@@ -4,6 +4,9 @@ Sun Apr 21 12:52:35 1996  Richard Basch  <basch@lehman.com>
 	defined, incorrect messages were being displayed for V4 clients.
 	Additionally, various errors were not being displayed with the
 	trailing newline.
+	Also, one could not specify -c in inetd.conf, because of the
+	variable initialization; initialization has been corrected to
+	allow either checksumming or ignoring the checksum.
 
 Sun Apr 21 00:30:28 1996  Sam Hartman  <hartmans@mit.edu>
 
